<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">福利社</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="now_refresh">刷新中…</string>
    <string name="no_more">没有更多数据了…</string>
    <string name="load_more">加载更多数据…</string>
    <string name="user_name">用户名</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="register">免费注册</string>
    <string name="user_name_connot_be_empty">帐号不能为空</string>
    <string name="illegal_user_name">非法帐号,6-16个数字和字母组合,请以字母开头</string>
    <string name="nick_name_connot_be_empty">昵称不能为空</string>
    <string name="password_connot_be_empty">密码不能为空</string>
    <string name="confirm_password_connot_be_empty">确认密码不能为空</string>
    <string name="two_input_password">两次输入密码不一致</string>
    <string name="registering">注册中…</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail_exists">用户名已经存在</string>
    <string name="login">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">正在登录</string>
    <string name="login_fail_unknow_user">用户名不存在</string>
    <string name="login_fail_error_password">登录密码错误</string>
    <string name="user_database_error">数据库操作异常</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">个人资料</string>
    <string name="user_name_cannot_be_modify">用户名作为登录名不能被修改</string>
    <string name="update_user_nick">修改昵称</string>
    <string name="update_nick_fail_modify">没有修改</string>
    <string name="update_fail">修改失败</string>
    <string name="nick_name_fail_unmodify">昵称未修改</string>
    <string name="update_success">修改成功</string>
    <string name="update_user_nick_success">修改昵称成功</string>
    <string name="update_user_avatar_fail">更新图像失败</string>
    <string name="update_user_avatar">上传图像中...</string>
    <string name="update_user_avatar_success">更新图像成功</string>
    <string name="collects_title">收藏de宝贝</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">取消收藏</string>
    <string name="add_cart_fail">添加购物车失败</string>
    <string name="add_cart_sucess">添加购物车成功</string>
    <string name="order_nothing">没有添加任何商品</string>
    <string name="confirm_order">确认订单</string>
</resources>
