<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="10dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:src="@drawable/icon_account"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingLeft="10dip"
                android:textColor="#000"
                android:textSize="18sp"
                android:singleLine="true"
                android:hint="@string/user_name"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_nickname"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_username"
            android:layout_marginTop="10dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_account"/>
            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/nickname"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_nickname"
            android:layout_marginTop="10dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_pwd"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_password"
            android:layout_marginTop="10dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_pwd"/>
            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/confirmpassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="18sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@id/rl_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/tb_btn_login_orange_norma"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
